--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="author" content="Željko Glasnović">
   <meta name="description" content="Kandidat za HSP-a na listi Mosta na izborima za Europski parlament">
 
+
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   
   <link rel="alternate" hreflang="en-us" href="index.html">
       
