--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
           </a>
         </li>
         
+        <li>
+          <a itemprop="sameAs" href="https://www.facebook.com/zeljko.glasnovic.1" target="_blank" rel="noopener">
+            <i class="fa fa-facebook big-icon"></i>
+          </a>
+        </li>
         
         <li>
           <a itemprop="sameAs" href="https://twitter.com/genGlasnovic" target="_blank" rel="noopener">
@@ -228,7 +233,7 @@
 
 <h1 id="biography">Životopis</h1>
 
-<p>Željko Glasnović je hrvatski general i političar s <a href="https://www.zeljkoglasnovic.com/hr/o-meni/biografija" target="_blank">odličnim životopisom</a>.</p>
+<p>Željko Glasnović je hrvatski general i političar s <a href="https://www.zeljkoglasnovic.com/hr/o-meni/biografija" target="_blank">bogatim životopisom</a>.</p>
 
 
     <div class="row">
